--- a/g-koa-project/package.json
+++ b/g-koa-project/package.json
@@ -6,7 +6,8 @@
     "koa-router": "^12.0.0",
     "koa2-cors": "^2.0.6",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "xml2js": "^0.5.0"
   },
   "name": "g-koa-project",
   "version": "1.0.0",
