--- a/g-vue-project/package.json
+++ b/g-vue-project/package.json
@@ -1,21 +1,25 @@
 {
   "name": "g-vue-project",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.4",
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "element-ui": "^2.4.5",
+    "vue": "^2.6.14",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.5"
-  }
+    "@vue/cli-service": "~5.0.0",
+    "vue-cli-plugin-element": "~1.0.1",
+    "vue-template-compiler": "^2.6.14"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
