--- a/g-vue-project/package.json
+++ b/g-vue-project/package.json
@@ -9,11 +9,15 @@
   "dependencies": {
     "axios": "^1.4.0",
     "element-ui": "^2.4.5",
+    "file-saver": "^2.0.5",
+    "script-loader": "^0.7.2",
     "vue": "^2.6.14",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
+    "script-loader": "^0.7.2",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.14"
   },
