--- a/g-vue-project/package.json
+++ b/g-vue-project/package.json
@@ -12,6 +12,7 @@
     "file-saver": "^2.0.5",
     "script-loader": "^0.7.2",
     "vue": "^2.6.14",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.0.1",
     "xlsx": "^0.18.5"
   },
